<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>dev.kof</groupId>
    <artifactId>kof-parent</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <name>Kof</name>
    <description>A modern statically-typed language for the JVM</description>

    <modules>
        <module>kof-compiler</module>
        <module>kof-cli</module>
        <module>kof-runtime</module>
        <module>kof-script</module>
        <module>kof-c-compiler</module>
    </modules>

    <properties>
        <!--
          Single source of truth for the build version is the VERSION file at the
          repository root. The release pipeline reads it and updates this property
          (scripts/bump-version.sh). Do not edit this by hand.
        -->
        <revision>0.3.0-beta</revision>
        <maven.compiler.release>21</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <asm.version>9.8</asm.version>
        <junit.version>5.11.3</junit.version>
        <graaljs.version>25.0.4</graaljs.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-util</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.ow2.asm</groupId>
                <artifactId>asm-tree</artifactId>
                <version>${asm.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.14.0</version>
                    <configuration>
                        <release>21</release>
                        <compilerReuseStrategy>alwaysNew</compilerReuseStrategy>
                        <!-- o incremental do javac corrompe o target/classes
                             (NoClassDefFoundError intermitente de inner
                             classes: KofLog$LogCall, KofUi$UiCall...) -->
                        <useIncrementalCompilation>false</useIncrementalCompilation>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.5.4</version>
                    <configuration>
                        <!-- -Xshare:off: o CDS do fork quebra o class loading
                             com NoClassDefFoundError intermitente de classes
                             que existem no classpath -->
                        <argLine>-Xshare:off -Xmx1g</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
